# morpheus

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  pytest.yml  ruff.yml
models/: __init__.py  dataclasses.py
morpheus/: __init__.py  constants.py  dataset.py
tests/: constants.py  test_dataclasses.py  test_dataset.py  test_general.py  test_main.py
utils/: __init__.py  general.py
