[project]
name = "morpheus"
version = "0.1.0"
description = "Computer Vision Dataset Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "opencv-python",
    "psutil",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff",
]
