[project]
name = "morpheus"
version = "0.1.0"
description = "Computer Vision Dataset Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "opencv-python",
    "psutil",
    "tqdm",
]

[project.scripts]
morpheus = "morpheus.dataset:cli_main"

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["morpheus", "models", "utils"]

[tool.uv]
package = true
